--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "preact-compat": "^3.17.0",
     "preact-icons": "^2.2.5",
     "preact-material-components": "^1.1.7",
-    "preact-router": "^2.5.7"
+    "preact-router": "^2.5.7",
+    "react-ga": "^2.2.0"
   }
 }
