--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
     "preact-cli": "^1.4.1"
   },
   "dependencies": {
-    "highland": "^2.11.1",
     "material-ui": "^0.19.2",
     "material-ui-icons": "^1.0.0-beta.10",
     "preact": "^8.2.5",
@@ -28,7 +27,6 @@
     "preact-material-components": "^1.1.7",
     "preact-router": "^2.5.7",
     "react-ga": "^2.2.0",
-    "react-pull-to-refresh": "^1.1.1",
-    "text-encoding": "^0.6.4"
+    "react-pull-to-refresh": "^1.1.1"
   }
 }
