--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,7 @@ sudo: false
 before_install:
 - curl -o- -L https://yarnpkg.com/install.sh | bash -s -- --version 0.27.5
 - export PATH=$HOME/.yarn/bin:$PATH
-cache:
-  yarn: true
+cache: yarn
 
 notifications:
   email:
