--- a/src/manifest.json
+++ b/src/manifest.json
@@ -7,12 +7,13 @@
   "background_color": "#fff",
   "theme_color": "#2196f3",
   "icons": [{
-    "src": "/assets/icons/EMA-Bonn-433x317.gif",
-    "type": "image/gif",
-    "sizes": "433x317"
-  }, {
-    "src": "/assets/icons/apple-icon-144x144.png",
-    "type": "image/png",
-    "sizes": "144x144"
-  }]
+      "src": "/assets/icons/android-chrome-192x192.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+        "src": "/assets/icons/android-chrome-256x256.png",
+        "sizes": "256x256",
+        "type": "image/png"
+    }]
 }
