--- a/package.json
+++ b/package.json
@@ -21,12 +21,8 @@
   },
   "dependencies": {
     "material-ui": "^0.19.2",
-    "material-ui-icons": "^1.0.0-beta.10",
     "preact": "^8.2.5",
-    "preact-compat": "^3.17.0",
-    "preact-material-components": "^1.1.7",
     "preact-router": "^2.5.7",
-    "react-ga": "^2.2.0",
-    "react-pull-to-refresh": "^1.1.1"
+    "react-ga": "^2.2.0"
   }
 }
