Customize Template, Disable Zoom

--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "license": "MIT",
   "scripts": {
     "start": "if-env NODE_ENV=production && yarn run -s serve || yarn run -s dev",
-    "build": "preact build",
-    "serve": "preact build && preact serve",
-    "dev": "preact watch",
+    "build": "preact build --template src/template.html",
+    "serve": "yarn run build && preact serve",
+    "dev": "preact watch --template src/template.html",
     "test": "eslint src"
   },
   "eslintConfig": {
