--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -75,6 +75,7 @@ workflows:
           requires:
             - build
           filters:
-            only:
-              - master
+            branches:
+              only:
+                - master
 
